--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,17 +8,170 @@
 * {
   margin: 0;
   padding: 0;
+  transition-duration: 400ms;
 }
 html, body {
-  font-family: sans-serif;
+  font-family: 'Bad Script', cursive;
+  font-family: 'Montserrat', sans-serif;
   scroll-behavior: smooth;
   overflow-x: hidden; 
   transition-duration: 500ms;
+  color: white;
 }
 header {
   min-height: 184px;
   height: 184px;
   display: flex;
-  margin: 38px 22px;
-  justify-content: space-between;
+  padding: 20px 22px;
+}
+.logoAndLangsContainer {
+  display: flex;
+  flex-direction: column;
+}
+.langsContainer {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  top: -8px;
+}
+.logoAndLangs {
+  display: flex;
+  align-items: flex-start;
+}
+.langElement {
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #fff;
+  font-size: 1.2rem;
+  padding: 4px;
+}
+.langActiveElement {
+  color: #D1A954;
+}
+.logoContainer > img {
+  width: 120px;
+  height: 120px;
+  position: relative;
+  top: -18px;
+}
+.menuItem {
+  color: white;
+  font-size: 0.55rem;
+  padding-top: 8px;
+  text-transform: uppercase;
+  padding-bottom: 8px;
+  padding-left: 10px;
+  background-color: rgba(255, 255, 255, 0.1);
+  margin-top: 4px;
+  width: 100%;
+  padding-right: 5%;
+  font-weight: 600;
+  position: relative;
+}
+.menuActiveItem {
+  background: #D1A954;
+  box-shadow: 0px 0px 4px #D1A954;
+}
+#bg1 {
+  background: url("../img/bgs/bg1.png");
+  background-attachment: fixed;
+}
+.bg {
+  min-height: 100vh;
+  min-width: 100vh;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+h3 {
+  color: #fff;
+  font-family: 'Bad Script', cursive;
+  font-weight: 100;
+  font-size: 1.5rem;
+  text-align: center;
+  position: relative;
+  top: -1rem;
+}
+.new:after {
+  content: "NEW!";
+  /* font-family: 'Bad Script', cursive; */
+  color: #D1A954;
+  position: absolute;
+  top: 8px;
+  right: -18px;
+  font-weight: 100;
+  font-size: 0.6rem;
+}
+.wpContainer {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  bottom: 50px;
+  background: #302e2c;
+  border-radius: 10px;
+  width: 60vw;
+  left: 20vw;
+  transition-duration: 400ms;
+  box-shadow: 0px 0px 4px #D1A954;
+  animation: showWp 1.8s infinite;
+}
+@keyframes showWp {
+  50% {
+    box-shadow: 0px 0px 10px #D1A954;
+  }
+}
+.wpContainer span {
+  color: #D1A954;
+  padding: 5px;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-align: center;
+  width: 100%;
+  font-size: 0.9rem;
+}
+.wpContainer > img {
+  height: 1.8rem;
+  padding: 4px;
+  background-color: #D1A954;
+  border-radius: 10px;
+  animation: showImgWp 1.8s infinite;
+}
+@keyframes showImgWp {
+  50% {
+    transform: scale(1.1);
+    background-color: #8e7235;
+  }
+}
+.sliderContainer {
+  background: rgba(0, 0, 0, 0.1);
+  width: 100vw;
+  height: 70vh;
+  box-shadow: -10px 10px 10px rgba(0, 0, 0, 0.2);
+  position: relative;
+  left: 22px;
+  background: url("../img/bgs/bg2.png");
+}
+.blur {
+  position: absolute;
+  height: 100%;
+  width: 30px;
+  z-index: 6;
+  right: 22px;
+  backdrop-filter: blur(8px);
+}
+footer {
+  padding: 22px;
+  font-weight: 200;
+}
+.bp {
+  font-weight: 700;
+  font-size: 0.8rem;
+}
+.copyright {
+  margin-top: 2rem;
+  font-size: 0.7rem;
+  text-align: center;
+  width: 90vw;
+  margin-bottom: 5.5rem;
 }
