исправлены незначительные ошибки

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,20 +145,35 @@ h3 {
 }
 .sliderContainer {
   background: rgba(0, 0, 0, 0.1);
-  width: 100vw;
   height: 70vh;
   box-shadow: -10px 10px 10px rgba(0, 0, 0, 0.2);
   position: relative;
   left: 22px;
-  background: url("../img/bgs/bg2.png");
+}
+.slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-y: hidden!important;
+  overflow-x: scroll!important;
+}
+.slider > div {
+  display: inline-block;
+  height: 70vh!important;
+  width: 87vw;
+}
+.slider > div > img {
+
 }
 .blur {
   position: absolute;
   height: 100%;
   width: 30px;
   z-index: 6;
-  right: 22px;
-  backdrop-filter: blur(8px);
+  left: calc(100vw - 50px);
+  backdrop-filter: blur(15px);
 }
 footer {
   padding: 22px;
